# Highload-homework-MAI

./: .gitignore  README.md  cart_service_index.yml  commands.sql  docker-compose.yaml  performance.md  product_service_index.yml  register_users.py  run_service.sh  user_service_index.yml
conan/: conanfile.txt
config/: db.env  proxysql.cnf
cpp/: CMakeLists.txt
cpp/auth_service/: CMakeLists.txt  kafka_consumer.cpp  main.cpp
cpp/auth_service/include/: authentication_common.h  request_handler_factory.h  service_initializer.h  user.h  user_base.h
cpp/auth_service/src/: authentication_common.cpp  kafka_config.cpp  request_handler_factory.cpp  service_initializer.cpp  user.cpp  user_base.cpp  user_cache.cpp  user_validator.cpp
cpp/cache_service/: CMakeLists.txt
cpp/cache_service/include/: user_cache.h
cpp/cache_service/src/: request_handler_factory.cpp  service_initializer.cpp
cpp/cart_service/: CMakeLists.txt  main.cpp
cpp/cart_service/src/: cart_base.cpp  request_handler_factory.cpp
cpp/product_service/: CMakeLists.txt
cpp/product_service/include/: product.h  product_validator.h
cpp/product_service/src/: product.cpp  product_base.cpp  product_validator.cpp  request_handler_factory.cpp
cpp/utils/: CMakeLists.txt
cpp/utils/include/: auth_data.h  db_config.h  db_session_manager.h  http_request_common.h  i_service_initializer.h
cpp/utils/src/: auth_data.cpp  authentication_request.cpp  db_config.cpp  db_session_manager.cpp  http_request_common.cpp
doc/: components.md  context.md  task.md
docker/auth_service/: Dockerfile
docker/cart_service/: Dockerfile
docker/cpp_image/: Dockerfile
docker/product_service/: Dockerfile
